@@ -20,6 +20,9 @@ BUGFIXES:
   ZOOKEEPER-2340: JMX is disabled even if JMXDISABLE is false
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2229: Several four-letter words are undocumented
+  (Chris Nauroth via rgs)
+
 Release 3.4.7 - 2015-11-08
 
 Backward compatible changes:
